--- a/.github/workflows/e2e-pod-level-pipeline.yml
+++ b/.github/workflows/e2e-pod-level-pipeline.yml
@@ -1,8 +1,10 @@
 ---
 name: Pod-Level-Pipeline
 on:
-  schedule:
-    - cron: "30 20 * * *" # Daily 02:30 AM in midnight
+  workflow_dispatch:
+    inputs:
+      hihi:
+        default: "hihi"
 
 defaults:
   run:
